# PROJ_wrapper_multiplatform

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  proj_wrapper.cpp  vcpkg.json
.github/workflows/: main.yml
